Upgraded Prototype to 1.6.0.1, removed Interpolatable and updated code accordingly
git-svn-id: http://active-support-for-javascript.googlecode.com/svn/trunk@8 c62ddfc6-5434-0410-8a9f-6560581ae375

--- a/spec/index.html
+++ b/spec/index.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" href="js-spec.css" type="text/css" charset="utf-8" />
 	<script type="text/javascript" src="../lib/prototype.js"></script>
 	<script type="text/javascript" src="../dist/active_support.js"></script>
-	<script type="text/javascript" src="../dist/jsspec.js"></script>
+	<script type="text/javascript" src="jsspec.js"></script>
 	<script type="text/javascript" charset="utf-8">
-    document.observe('dom:loaded', Specs.run);
+    document.observe('dom:loaded', function() { Specs.run() });
 	</script>
 </head>
 <body>
